[gd_scene load_steps=3 format=3 uid="uid://bfvhadix3fsyw"]

[ext_resource type="Script" path="res://Scripts/Map/MapLocation.gd" id="1_vofrj"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hn4bt"]

[node name="MapLocation" type="Area2D"]
script = ExtResource("1_vofrj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_hn4bt")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
